# bt-k8s-practice

./: .gitignore  README.md  example-ingress.yaml  mongo-express.yaml
kubernetes-tutorial-for-beginners/: mongo.yaml
simple-fastapi-app/: Dockerfile  docker-build.sh  docker-compose.yaml  docker-push.sh  docker-run-bash.sh  docker-run-server.sh  docker-run.sh  main.py  pyproject.toml  run-uvicorn.sh
simple-fastapi-app/k8s/: simple-fastapi-app.yaml
